Fix central alignment of images in posts

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -66,6 +66,7 @@ a {
   }
 
   .aligncenter {
+    display: block;
     margin: 1rem auto;
   }
 
